<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_height="468dp"
        android:backgroundTint="#ffffff"
        android:background="@drawable/radius"
        android:gravity="center_horizontal">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="187dp"
            app:srcCompat="@color/colorAccent"
            android:id="@+id/imageView3"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:includeFontPadding = "false"
            android:fontFamily="@font/notosans_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/darkGrayB"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center_horizontal"
            android:text="@string/msg_donate_success"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

    <TextView
            android:includeFontPadding = "false"
            android:fontFamily="@font/notosans_demilight"
            android:textSize="14sp"
            android:textColor="@color/grayB"
            android:lineSpacingExtra="4sp"
            android:gravity="center_horizontal"
            android:text="@string/msg_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
    <Button
            android:includeFontPadding = "false"
            android:fontFamily="@font/notosans_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/check_stamp"
            android:layout_width="280dp"
            android:layout_height="56dp"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="@color/goldenYellow"
            android:background="@drawable/radius"
            android:id="@+id/btn_check"
            android:layout_marginBottom="5dp"/>

    <Button
            android:includeFontPadding = "false"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/skip"
            android:textSize="14sp"
            android:textColor="@color/grayA"
            android:backgroundTint="@color/lightGrayB"
            android:background="@drawable/radius"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:id="@+id/btn_close"/>

</LinearLayout>