<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_donate_record">

    <include
            layout="@layout/toolbar_with_hamburger">
    </include>

    <TextView
            android:paddingHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/darkGrayA"
            android:text="@string/donate_history"
            android:textStyle="bold"
    />

    <LinearLayout
            android:paddingHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/grayB"
                    android:text="@string/donate_num"
            />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkGrayA"
                        android:letterSpacing="0.06"
                        android:text="9"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/grayA"
                        android:text="@string/times"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/grayB"
                    android:text="@string/berry_donated"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/darkGrayA"
                        android:letterSpacing="0.06"
                        android:text="128"
                        android:textStyle="bold"
                />
                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/grayA"
                        android:text="@string/berry"
                />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="320dp"
            android:layout_height="1dp"
    />
    <ImageView
            android:paddingHorizontal="20dp"
            android:layout_marginTop="19dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@android:color/darker_gray"/>
    <View
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="320dp"
            android:layout_height="1dp"
    />

    <TextView
            android:paddingHorizontal="20dp"
            android:layout_marginTop="19.5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/darkGrayA"
            android:letterSpacing="0.01"
            android:text="@string/participate_status"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_donate_record">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>