<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingHorizontal="20dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/darkGrayA"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="5sp"
                android:text="@string/msg_use_berry_history"
                android:layout_marginBottom="34dp"/>

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_donate_use_container">
        </android.support.v7.widget.RecyclerView>

        <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/grey_line"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_berry"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrayC"/>

            <TextView
                    android:paddingHorizontal="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="24sp"
                    android:textColor="@color/darkGrayA"
                    android:textStyle="bold"
                    android:text="100.000"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/grayA"
                    android:text="@string/berry"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>