<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_my_page">

    <include
            layout="@layout/toolbar_with_hamburger">
    </include>

    <TextView
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/darkGrayA"
            android:text="@string/mypage"
            android:layout_marginBottom="10dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingVertical="22dp">

        <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/img_temp_profile"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="12dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
                <TextView
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/darkGrayA"
                        android:text="나뭇잎"/>

                <ImageView
                        android:layout_centerVertical="true"
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:id="@+id/btn_nickname_edit"
                        android:src="@drawable/ic_edit_large"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="40dp"
                />
            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/grayB"
                    android:text="parkce37@gmail.com"/>
        </LinearLayout>
    </LinearLayout>

    <View
            android:layout_marginTop="22dp"
            android:layout_marginVertical="8dp"
            android:layout_width="335dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">
        <TextView
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/grayB"
                android:text="@string/berry_manage"
        />
        <TextView
                android:paddingVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/darkGrayC"
                android:text="@string/own_berry"
        />

        <TextView
                android:paddingVertical="6dp"
                android:text="베리 이용 내역"
        android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/darkGrayC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_more_small"
                android:paddingRight="16dp"
                android:id="@+id/btn_berry_history"/>
    </LinearLayout>

    <View
            android:layout_marginTop="12dp"
            android:layout_marginVertical="8dp"
            android:layout_width="335dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">
        <TextView
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/grayB"
                android:text="기타"
        />
        <TextView
                android:paddingRight="12dp"
                android:paddingVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/darkGrayC"
                android:text="문의하기"
                android:drawableRight="@drawable/ic_more_small"
       />

        <TextView
                android:paddingVertical="6dp"
                android:text="로그아웃"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/darkGrayC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:id="@+id/btn_logout"/>
        <TextView
                android:paddingVertical="6dp"
                android:text="탈퇴하기"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/darkGrayC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"/>
    </LinearLayout>

    <View
            android:layout_marginTop="16dp"
            android:layout_marginVertical="8dp"
            android:layout_width="335dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"/>

    <TextView
            android:paddingVertical="6dp"
            android:text="오픈소스 라이센스"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:textColor="@color/darkGrayC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_more_small"
            android:paddingRight="16dp"/>
    <TextView
            android:paddingVertical="6dp"
            android:text="개인정보 처리방침"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:textColor="@color/darkGrayC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_more_small"
            android:paddingRight="16dp"/>

</LinearLayout>